[package]
name = "group"
version = "0.7.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
readme = "README.md"
license = "MIT/Apache-2.0"

description = "Elliptic curve group traits and utilities"
documentation = "https://docs.rs/group/"
homepage = "https://github.com/ebfull/group"
repository = "https://github.com/ebfull/group"
edition = "2018"

[dependencies]
byteorder = { version = "1", default-features = false }
ff = { version = "0.7", default-features = false }
rand = { version = "0.7", optional = true, default-features = false }
rand_core = { version = "0.5", default-features = false }
rand_xorshift = { version = "0.2", optional = true }
subtle = { version = "2.2.1", default-features = false }

[features]
default = ["alloc"]
alloc = []
tests = ["alloc", "rand", "rand_xorshift"]

[badges]
maintenance = { status = "actively-developed" }
